parametric scheduler example added